It should be allowed to pass paths relative to the workdir to the ImageProvider.
git-svn-id: https://svn.code.sf.net/p/xmlworker/code-0/trunk@176 7cc6213b-955e-4e79-b9b9-6c4fb085f9d1